Changed default route but nothing major

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,2 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<h1>Help</h1>
+<p>If you're having trouble with this app, I'd suggest trying to use the real Twitter instead. The original is probably the best.</p>
