--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,2 @@
-<% provide(:title, "Home | Bettwitter") %>
-<!DOCTYPE html>
-<html>
-<title><%= yield(:title) %></title>
-</head>
-
-<body>
 <h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
-
-</body>
-</html>
+<p>This is the incredibly fabulous home page (for now).</p>
