--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,27 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
-    <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+    <%= csrf_meta_tags %>
+    <%= render 'layouts/shim' %>
 
+  </head>
   <body>
-    <%= yield %>
+    <%= render 'layouts/header' %>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+          <%= yield %>
+      </div>
+    </div>
+    <div id="row">
+      <div class="col-md-12">
+        <%= render 'layouts/footer' %>
+      </div>
+    </div>
+
+  </div><!-- ends main container-->
   </body>
 </html>
