--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,11 @@
+<div class="center jumbotron">
 <h1>StaticPages#home</h1>
+
+<h3>Welcome to the Sample App!</h3>
 <p>This is the incredibly fabulous home page (for now).</p>
+
+<%= link_to "Sign up!", signup_path , class:"btn btn-lg btn-primary" %>
+
+</div>
+
+<%= link_to image_tag("rails-logo.svg", alt: "Rails logo", class:"img bg-img"), 'http://rubyonrails.org/' %>
