--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,21 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% end %>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-          <%= yield %>
+        <%= yield %>
+
       </div>
     </div>
     <div id="row">
       <div class="col-md-12">
         <%= render 'layouts/footer' %>
+        <%= debug(params) if Rails.env.development? %>
       </div>
     </div>
 
