--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,31 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
+
     <div class="row">
       <div class="col-md-3">
-    <h1><%= link_to "sample app", root_path, id: "logo" %></h1>
-  </div>
-  <div class="col-md-4 pull-right">
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", help_path %></li>
-        <li><%= link_to "Log in", "#" %></li>
-      </ul>
-    </nav>
-  </div>
-  </div><!--ends row-->
-  </div>
+        <h1><%= link_to "sample app", root_path, id: "logo" %></h1>
+      </div>
+      <div class="col-md-4 pull-right">
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Home", root_path %></li>
+            <li><%= link_to "Help", help_path %></li>
+            <% if logged_in? %>
+              <li><%= link_to "Users", "#" %></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Profile", current_user %></li>
+                  <li><%= link_to "Settings", "#" %></li>
+                  <li class="divider"></li>
+                  <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+                </ul>
+              </li>
+              <% else %>
+                <li><%= link_to "Log in", login_path %></li>
+              <% end %>
+          </ul>
+        </nav>
+      </div>
+    </div><!--ends row-->
+
 </header>
