--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,24 +9,23 @@
 
   </head>
   <body>
-    <%= render 'layouts/header' %>
     <div class="container">
+    <%= render 'layouts/header' %>
+
       <div class="row">
         <div class="col-md-12">
         <% flash.each do |message_type, message| %>
-          <div class="alert alert-<%= message_type %>"><%= message %></div>
+          <div class="alert alert-dismissible alert-<%= message_type %>"><%= message %></div>
         <% end %>
 
         <%= yield %>
 
-      </div>
-    </div>
-    <div id="row">
-      <div class="col-md-12">
+      </div><!-- ends 12 col container -->
+    </div><!-- ends row -->
+
+
         <%= render 'layouts/footer' %>
         <%= debug(params) if Rails.env.development? %>
-      </div>
-    </div>
 
   </div><!-- ends main container-->
   </body>
